--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <title>BMI Calculator</title>
 </head>
+
 <body>
 <h1>Welcome to BMI Calculator</h1>
+<form action="/calculate" method="POST">
+    <p>
+        <label>Weight (kg):</label><br>
+        <input type = "number" name = "weight" step = "0.01" required>
+    </p>
+    <p>
+        <label>Height (meters):</label><br>
+        <input type = "number" name = "height" step = "0.01" required>
+    </p>
+    <button type = "submit">Calculate BMI</button>
+</form>
 </body>
 </html>
