--- a/public/style.css
+++ b/public/style.css
@@ -27,3 +27,22 @@ button {
     border: none;
     border-radius: 6px;
 }
+.underweight {
+    color: blue;
+    font-weight: bold;
+}
+
+.normal {
+    color: green;
+    font-weight: bold;
+}
+
+.overweight {
+    color: orange;
+    font-weight: bold;
+}
+
+.obese {
+    color: red;
+    font-weight: bold;
+}
