Convert result.html into template with placeholders for BMI results

--- a/views/result.html
+++ b/views/result.html
@@ -10,9 +10,8 @@
 <div class="container">
     <h1>Your BMI Result</h1>
 
-    <p id="bmi-value"></p>
-
-    <p id="bmi-category"></p>
+    <p>Your BMI is: <strong class="{{class}}">{{bmi}}</strong></p>
+    <p>Category: <strong class="{{class}}">{{category}}</strong></p>
 
     <a href="/" class="btn">Back</a>
 </div>
