--- a/views/index.html
+++ b/views/index.html
@@ -7,17 +7,17 @@
 </head>
 
 <body>
-<h1>Welcome to BMI Calculator</h1>
-<form action="/calculate" method="POST">
-    <p>
-        <label>Weight (kg):</label><br>
-        <input type = "number" name = "weight" step = "0.01" required min="0.01">
-    </p>
-    <p>
-        <label>Height (meters):</label><br>
-        <input type = "number" name = "height" step = "0.01" required min="0.01">
-    </p>
-    <button type = "submit">Calculate BMI</button>
-</form>
+<div class="container">
+    <h1>BMI Calculator</h1>
+    <form action="/calculate" method="POST">
+        <label>Weight (kg):</label>
+        <input type = "number" name = "weight" step = "0.01" required min = "0.01">
+
+        <label>Height (meters):</label>
+        <input type = "number" name = "height" step = "0.01" required min = "0.01">
+
+        <button type="submit">Calculate BMI</button>
+    </form>
+</div>
 </body>
 </html>
