--- a/views/result.html
+++ b/views/result.html
@@ -5,16 +5,17 @@
     <title>BMI Result</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-<body>
 
+<body>
 <div class="container">
     <h1>Your BMI Result</h1>
 
-    <p>Your BMI is: <strong class="{{class}}">{{bmi}}</strong></p>
-    <p>Category: <strong class="{{class}}">{{category}}</strong></p>
+    <div class="result-box">
+        <p>Your BMI is: <strong class="{{class}}">{{bmi}}</strong></p>
+        <p>Category: <strong class="{{class}}">{{category}}</strong></p>
+    </div>
 
     <a href="/" class="btn">Back</a>
 </div>
-
 </body>
 </html>
