Add BMI disclaimer text and reset functionality

--- a/views/result.html
+++ b/views/result.html
@@ -38,8 +38,12 @@
         </p>
     </div>
 
-    <a href="/" class="btn">Back</a>
-</div>
+    <p class="disclaimer">
+        BMI is not a medical diagnosis.
+    </p>
 
+    <a href="/" class="btn">Calculate Again</a>
+
+</div>
 </body>
 </html>
