--- a/public/style.css
+++ b/public/style.css
@@ -137,3 +137,11 @@ button:hover,
     display: block;
     margin-top: 25px;
 }
+
+.disclaimer {
+    margin-top: 10px;
+    font-size: 13px;
+    color: #777;
+    text-align: center;
+}
+
