Add simple UI animations

--- a/views/index.html
+++ b/views/index.html
@@ -30,5 +30,6 @@
         <button type="submit">Calculate BMI</button>
     </form>
 </div>
+<script src="/animations.js"></script>
 </body>
 </html>
