Improve height input validation with realistic limits

--- a/views/index.html
+++ b/views/index.html
@@ -19,13 +19,32 @@
         </select>
 
         <label>Age:</label>
-        <input type="number" name="age" min="5" max="120" required>
+        <input
+                type="number"
+                name="age"
+                min="5"
+                max="120"
+                required
+        >
 
         <label>Weight (kg):</label>
-        <input type="number" name="weight" step="0.1" min="20" required>
+        <input
+                type="number"
+                name="weight"
+                step="0.1"
+                min="20"
+                required
+        >
 
         <label>Height (m):</label>
-        <input type="number" name="height" step="0.01" min="0.5" required>
+        <input
+                type="number"
+                name="height"
+                step="0.01"
+                min="0.5"
+                max="3.5"
+                required
+        >
 
         <button type="submit">Calculate BMI</button>
     </form>
